@@ -5,4 +5,4 @@ workflow_type = Github Actions
 [Github Actions]
 repo_name = demo
 repo_url = git@github.com:zhihang161013/demo.git
-runner = ubuntu-latest
+runner = ubuntu-24.04
