@@ -52,14 +52,13 @@ class Database:
                     timestamp DATETIME DEFAULT CURRENT_TIMESTAMP,
                     FOREIGN KEY (software_id) REFERENCES software(id),
                     FOREIGN KEY (version_id) REFERENCES version(id),
-                    UNIQUE (software_id, version_id, arch, registry, repository, tag)
+                    UNIQUE (software_id, version_id, registry, repository, tag)
                 )
                 ''')
                 
                 conn.commit()
         except sqlite3.Error as e:
             self.logger.error(f"Error creating tables: {e}")
-            raise DatabaseError(f"Error creating tables: {e}")
 
     def insert_software(self, name):
         try:
@@ -77,7 +76,6 @@ class Database:
             return self.query_software(name)
         except sqlite3.Error as e:
             self.logger.error(f"Error inserting software: {e}")
-            raise DatabaseError(f"Error inserting software: {e}")
 
     def delete_software(self, name):
         try:
@@ -93,7 +91,6 @@ class Database:
             self.logger.warning(f"Software {name} has dependent records and cannot be deleted")
         except sqlite3.Error as e:
             self.logger.error(f"Error deleting software: {e}")
-            raise DatabaseError(f"Error deleting software: {e}")
 
     def query_software(self, name):
         try:
@@ -107,7 +104,6 @@ class Database:
                 return result
         except sqlite3.Error as e:
             self.logger.error(f"Error querying software: {e}")
-            raise DatabaseError(f"Error querying software: {e}")
 
     def list_software(self):
         try:
@@ -121,7 +117,6 @@ class Database:
                 return result
         except sqlite3.Error as e:
             self.logger.error(f"Error listing software: {e}")
-            raise DatabaseError(f"Error listing software: {e}")
 
     def insert_version(self, software_name, version_name):
         try:
@@ -143,14 +138,12 @@ class Database:
             return self.query_version(software_name, version_name)
         except sqlite3.Error as e:
             self.logger.error(f"Error inserting version: {e}")
-            raise DatabaseError(f"Error inserting version: {e}")
 
     def delete_version(self, software_name, version_name):
         try:
             software = self.query_software(software_name)
             if software is None:
                 self.logger.error(f"Software {software_name} not found")
-                raise DatabaseError(f"Software {software_name} not found")
             with sqlite3.connect(self.db_path) as conn:
                 conn.row_factory = _dict_factory
                 conn.execute("PRAGMA FOREIGN_KEYS=ON")
@@ -164,14 +157,12 @@ class Database:
             self.logger.warning(f"Version {version_name} for software {software_name} has dependent records and cannot be deleted")
         except sqlite3.Error as e:
             self.logger.error(f"Error deleting version: {e}")
-            raise DatabaseError(f"Error deleting version: {e}")
 
     def query_version(self, software_name, version_name):
         try:
             software = self.query_software(software_name)
             if software is None:
                 self.logger.error(f"Software {software_name} not found")
-                raise DatabaseError(f"Software {software_name} not found")
             with sqlite3.connect(self.db_path) as conn:
                 conn.row_factory = _dict_factory
                 cursor = conn.cursor()
@@ -182,7 +173,6 @@ class Database:
                 return result
         except sqlite3.Error as e:
             self.logger.error(f"Error querying version: {e}")
-            raise DatabaseError(f"Error querying version: {e}")
 
     def list_version(self, software_name):
         try:
@@ -199,25 +189,22 @@ class Database:
                 return result
         except sqlite3.Error as e:
             self.logger.error(f"Error listing version: {e}")
-            raise DatabaseError(f"Error listing version: {e}")
 
     def insert_image(self, software_name, version_name, arch, registry, repository, tag):
         try:
             software = self.query_software(software_name)
             if software is None:
                 self.logger.error(f"Software {software_name} not found")
-                raise DatabaseError(f"Software {software_name} not found")
             version = self.query_version(software_name, version_name)
             if version is None:
                 self.logger.error(f"Version {version_name} for {software_name} not found")
-                raise DatabaseError(f"Version {version_name} for {software_name} not found")
             with sqlite3.connect(self.db_path) as conn:
                 conn.row_factory = _dict_factory
                 conn.execute("PRAGMA FOREIGN_KEYS=ON")
                 cursor = conn.cursor()
                 cursor.execute('BEGIN TRANSACTION')
                 cursor.execute('''
-                INSERT INTO image (software_id, version_id, arch, registry, repository, tag)
+                INSERT OR REPLACE INTO image (software_id, version_id, arch, registry, repository, tag)
                 VALUES (?, ?, ?, ?, ?, ?)
                 ''', (software['id'], version['id'], arch, registry, repository, tag))
                 conn.commit()
@@ -225,38 +212,33 @@ class Database:
             self.logger.warning(f"Image {registry}/{repository}/{software_name}:{tag} already exists")
             return self.query_images(software_name, version_name, arch, registry, repository, tag)
 
-    def query_images(self, software_name, version_name, arch, repository, tag, registry="docker.io"):
+    def query_image(self, software_name, version_name, repository, tag, registry="docker.io"):
         try:
             software = self.query_software(software_name)
             if software is None:
                 self.logger.error(f"Software {software_name} not found")
-                raise DatabaseError(f"Software {software_name} not found")
             version = self.query_version(software_name, version_name)
             if version is None:
                 self.logger.error(f"Version {version_name} for {software_name} not found")
-                raise DatabaseError(f"Version {version_name} for {software_name} not found")
             with sqlite3.connect(self.db_path) as conn:
                 conn.row_factory = _dict_factory
                 cursor = conn.cursor()
                 cursor.execute('''
-                SELECT * FROM image WHERE software_id = ? AND version_id = ? AND arch = ? AND registry = ? AND repository = ? AND tag = ?
-                ''', (software['id'], version['id'], arch, registry, repository, tag))
-                result = cursor.fetchall()
+                SELECT * FROM image WHERE software_id = ? AND version_id = ? AND registry = ? AND repository = ? AND tag = ?
+                ''', (software['id'], version['id'], registry, repository, tag))
+                result = cursor.fetchone()
                 return result
         except sqlite3.Error as e:
             self.logger.error(f"Error querying images: {e}")
-            raise DatabaseError(f"Error querying images: {e}")
     
     def delete_image(self, software_name, version_name, arch, registry, repository, tag):
         try:
             software = self.query_software(software_name)
             if software is None:
                 self.logger.error(f"Software {software_name} not found")
-                raise DatabaseError(f"Software {software_name} not found")
             version = self.query_version(software_name, version_name)
             if version is None:
                 self.logger.error(f"Version {version_name} for software {software_name} not found")
-                raise DatabaseError(f"Version {version_name} for software {software_name} not found")
             with sqlite3.connect(self.db_path) as conn:
                 conn.row_factory = _dict_factory
                 conn.execute("PRAGMA FOREIGN_KEYS=ON")
@@ -270,4 +252,3 @@ class Database:
             self.logger.warning(f"Image {registry}/{repository}{software_name}:{tag} has dependent records and cannot be deleted")
         except sqlite3.Error as e:
             self.logger.error(f"Error deleting image: {e}")
-            raise DatabaseError(f"Error deleting image: {e}")
